[package]
name = "disk-name"
version = "1.0.0"
edition = "2021"
description = "A utility crate to get all existing disk names"
repository = "https://github.com/ValuONE/disk-name"
keywords = ["letter", "disk", "harddrive", "disk-name", "drive"]
authors = ["Valentin Piendl"]
categories = ["filesystem"]
license = "MIT"

[dev-dependencies]
rand = "0.8.5"
winapi = { version = "0.3.9", features = ["fileapi", "winbase"] }